fix/modal overflow

--- a/src/components/shared/Modal/Modal.module.scss
+++ b/src/components/shared/Modal/Modal.module.scss
@@ -25,6 +25,8 @@
 
 .contentWrapper {
   padding: 18rem 40rem 32rem;
+  max-height: 90%;
+  overflow-y: auto;
   border-radius: 5rem;
   transform: scale(0.65);
   position: relative;
